<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        app:title="Тренировки по фитнесу"/>

    <TextView
        android:id="@+id/titleTW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="15dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/training"/>

    <Button
        android:id="@+id/startButtonBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/begin"/>

    <TextView
        android:id="@+id/exerciseTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/exercise"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/descriptionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/timerTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/timeToEnd"/>

    <Button
        android:id="@+id/completedButtonBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/goNext"/>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imageViewIV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"/>

</LinearLayout>